[fixed #17798711] loader aligned

--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -498,6 +498,9 @@ h3.form_heading
     margin-bottom: 0 !important
     padding-bottom: 0 !important
 
+.ajax-loader
+  margin: 10px 5px 0
+  
 .activity_box
   margin: 0 !important
 
@@ -506,9 +509,6 @@ h3.form_heading
 
   .left
     float: left
-
-  .ajax-loader
-    margin: 5px
 
   .header
     background: $primary_dark
